# swc-plugin-mark-expressions

./: .gitignore  Cargo.toml  README.md  package.json
example/: package-lock.json  package.json  rspack.config.js  webpack.config.js
example/src/: importA.js  index.js  index.jsx  markedFunction.js
src/: lib.rs
tests/: fixture.rs
tests/fixture/existing/: input.js  output.js
tests/fixture/mixed/: input.js  input.tsx  output.js  output.tsx
tests/fixture/nested/: input.js  output.js
tests/fixture/simple/: input.js  output.js
tests/fixture/this/: input.js  output.js
tests/fixture/tsx/: input.tsx  output.tsx
tests/fixture/window/: input.js  output.js
