[package]
name = "swc_plugin_mark_expressions"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
regex = "1.10.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonc-parser = { version = "0.23.0", features = ["serde"] }
swc_core = { version = "=0.89.4", features = ["ecma_plugin_transform"] }
swc_common = { version = "=0.33.15", features = ["concurrent"] }
swc_ecma_ast = "=0.111.1"
swc_ecma_parser = "=0.142.1"
swc_ecma_utils = "=0.126.1"
swc_ecma_visit = "=0.97.1"
swc_plugin_macro = "=0.9.16"
sourcemap = "=6.4.1"

[dev-dependencies]
testing = "=0.35.16"
swc_ecma_transforms_testing = "=0.139.2"