[package]
name = "swc_plugin_mark_expressions"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
regex = "1.10.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonc-parser = { version = "0.23.0", features = ["serde"] }
swc_core = { version = "=0.92.6", features = ["ecma_plugin_transform", "common_concurrent"] }

[dev-dependencies]
swc_core = { version = "=0.92.6", features = ["ecma_plugin_transform", "ecma_parser", "common_concurrent", "testing"] }
testing = { version = "=0.35.25" }